# nexus-memory

./: .gitignore  Cargo.toml  LICENSE  README.md  VALIDATION_REPORT.md  reproducibility.md
baselines/: crossbeam-comparison.rs  hazard-pointer-baseline.rs  rcu-baseline  rcu-baseline.rs
docker/: Dockerfile  docker-compose.yml
formal-verification/: epoch-reclamation.out  epoch-reclamation.tla  model-config.cfg  refinement-mapping.tla
nexus-benchmarks/: Cargo.toml  contention_scaling_results.csv
nexus-benchmarks/benches/: batch_benchmarks.rs  contention_scaling.rs  cross_paradigm_benchmarks.rs  energy_benchmarks.rs  graph_benchmarks.rs  straggler_stress.rs  stream_benchmarks.rs  synthetic.rs  zero_copy_proof.rs
nexus-benchmarks/results/: epoch-latency.csv  statistical-summary.json
nexus-memory/: Cargo.toml
nexus-memory/benches/: epoch_benchmark.rs
nexus-memory/src/: lib.rs  sync.rs
nexus-memory/src/epoch/: collector.rs  guard.rs  hierarchical.rs  metrics.rs  mod.rs
nexus-memory/src/numa/: allocator.rs  mod.rs  topology.rs
nexus-memory/src/zero_copy/: buffer.rs  mod.rs  phantom.rs
nexus-memory/tests/: loom_verification.rs
nexus-validation/: Cargo.toml
nexus-validation/data/: benchmark_results.csv
nexus-validation/scripts/: analyze.py
nexus-validation/src/: confidence.rs  lib.rs  numa_verify.rs  statistical.rs
nexus-validation/tests/: numa_placement.rs
nexus-verification/: Cargo.toml
nexus-verification/proofs/: categorical_laws.v
nexus-verification/spec/: epoch_reclamation.tla  paradigm_transition.tla
nexus-verification/src/: lib.rs  tla_plus.rs
results/: energy_20251212_172802.csv  epoch_20251212_172802.csv  numa_20251212_172802.csv  rcu_baseline.csv  scaling_raw.csv  zerocopy_20251212_172802.csv
scripts/: check_env.sh  generate-figures.py  generate_financial_data.py  generate_validation_report.py  plot_scaling_theory.py  reproduce-all.sh  run-benchmarks.sh  run_scaling_proof.sh  verify_scaling_law.py
