[workspace]
resolver = "2"
members = [
    "nexus-memory",
    "nexus-benchmarks",
    "nexus-validation",
    "nexus-verification",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nexus Memory Authors"]
license = "Apache-2.0"
repository = "https://github.com/nexus-memory/nexus"
description = "Unified memory reclamation framework for cross-paradigm data processing"
keywords = ["memory", "epoch", "concurrent", "lock-free", "zero-copy"]
categories = ["concurrency", "memory-management", "data-structures"]
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
parking_lot = "0.12"
once_cell = "1.19"

# Atomic operations
portable-atomic = "1.6"

# NUMA support
libc = "0.2"
nix = { version = "0.27", features = ["mman", "sched"] }

# Async runtime (optional)
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rand = "0.8"

# Development
loom = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
