[package]
name = "nexus-validation"
version = "0.1.0"
edition = "2021"
authors = ["Nexus Memory Authors"]
license = "Apache-2.0"
repository = "https://github.com/nexus-memory/nexus"
description = "Statistical validation suite for Nexus Memory benchmarks"
publish = false
rust-version = "1.75"

[dependencies]
nexus-memory = { path = "../nexus-memory" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistical analysis
statrs = "0.16"
nalgebra = "0.32"

# CSV parsing
csv = "1.3"

[dev-dependencies]
rand = "0.8"
proptest = "1.4"
